--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "express-session": "^1.17.2",
