--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "express-session": "^1.17.2",
+    "mocha": "^9.2.2",
     "pg": "^8.7.3"
   },
   "devDependencies": {
